# DocDig

./: .gitignore  LineDetecion.ipynb  MachineLearningProjekt.ipynb  QuoMarkRemovement.ipynb  QuotationMarkRemovementThresholdExtractor.ipynb  ReadMe.md  SegmentationClient.py  TestRun.ipynb  TestRunNumbers.ipynb  class_indices.json  class_indices_extended.json  cnn_client.py  example_for_using_table_detection.py  link_to_tatr_models.txt  main.ipynb  main.py  pyproject.toml  requirements.txt  segmentation_client.py  train.ipynb  utils.py
.config/: .last_survey_prompt.yaml  .last_update_check.json
AutoEncoders/: ae_denoise_mnist.ipynb  ae_denoise_tablecells.ipynb  init.ipynb  mae_tsr_wtw.ipynb  vit_cifar100.ipynb
Dataset/: create_dataset.py
Dataset/Utils/: seg_client_dataset.py  utils.py
TATR-Case/detected_tables/: 1.json  2.json  3.json  4.json
TableDetector/: table_detector.py
artefacts/: MachineLearningProjekt.ipynb  train.ipynb
config/: age_classes.json
docker/: Dockerfile
src/: app.py  main.py
src/libs/: cv_helpers.py  table_detector.py
src/modules/: cell_denoiser.py  cell_formatter.py  column_extractor.py  detect_columns.py  detect_species_column.py  fuzzy_matching.py  module_base.py  pdf_converter.py  predictor.py  predictor_dummy.py  quotation_mark_detector.py  reorder_columns.py  row_extractor.py  table_rotator.py  tatr_extraction.py  trocr.py
src/pipeline/: cv_pipeline.py  pipeline.py
table_transformer/detr/models/: backbone.py  detr.py  detr_multi.py  matcher.py  position_encoding.py  segmentation.py
table_transformer/src/: inference.py
tatr/: detection_config.json  inference.py
