[tool.poetry]
name = "DocDig"
version = "0.1.0"
description = ""
authors = ["Benedikt Veith <bv@scherer-software.de>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pathlib = "^1.0.1"
pdf2image = "^1.17.0"
tensorflow = "^2.17.0"
ipython = "^8.28.0"
opencv-python = "^4.10.0.84"
numpy = "2.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
pip = "^24.3.1"
scikit-learn = "^1.5.2"
tqdm = "^4.67.0"
cython = "^3.0.11"
matplotlib = "^3.9.2"
pycocotools = "^2.0.8"
pillow = "^11.0.0"
editdistance = "^0.8.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
pymupdf = "^1.24.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"